<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#4B2E73">

    <LinearLayout
        android:id="@+id/linearAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_toolbar"
        app:layout_constraintBottom_toTopOf="@id/tv_msg_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title_error_dialog"
            android:textColor="#CDE7FB"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_msg_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/msg_error_dialog"
        android:textColor="#CDE7FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearAlert" />

    <EditText
        android:id="@+id/etIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#CDE7FB"
        android:textColor="#CDE7FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_msg_dialog"
        tools:text="192.168.1.132" />


    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/primary_toolbar"
        android:text="@string/btn_cancelar"
        android:textColor="#CDE7FB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etIP" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/primary_toolbar"
        android:text="@string/btn_aceptar"
        android:textColor="#CDE7FB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@id/etIP" />

</androidx.constraintlayout.widget.ConstraintLayout>