<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#4B2E73">

    <LinearLayout
        android:id="@+id/linearAlert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_toolbar"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:text="@string/title_dialog_config"
            android:textColor="#CDE7FB"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="end"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_estado2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estado: "
                android:textColor="@color/white"
                android:textSize="12sp"
                />

            <TextView
                android:id="@+id/tv_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:text="NO CONCECTADO" />
        </LinearLayout>
        </LinearLayout>



    <TextView
        android:id="@+id/tv_fuente_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Fuente de datos"
        android:textColor="#CDE7FB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearAlert" />

    <RadioGroup
        android:id="@+id/rg_fuente_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_fuente_datos">
        <RadioButton
            android:id="@+id/rb_git"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="Git"
            android:textColor="@color/white"
            app:buttonTint="@color/white" />

        <RadioButton
            android:id="@+id/rb_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="Custom"
            android:textColor="@color/white"
            app:buttonTint="@color/white" />

    </RadioGroup>



    <TextView
        android:id="@+id/tv_ip_servidor_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="Ip del servidor:"
        android:textColor="#CDE7FB"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_fuente_datos" />

    <EditText
        android:id="@+id/etIP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="#CDE7FB"
        android:textColor="#CDE7FB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ip_servidor_dialog"
        tools:text="192.168.1.132" />

    <TextView
        android:id="@+id/tv_path_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="Path del recurso:"
        android:textColor="#CDE7FB"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etIP" />

    <EditText
        android:id="@+id/etPath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="#CDE7FB"
        android:textColor="#CDE7FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_path_dialog"
        tools:text="ciudades.json" />


    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/primary_toolbar"
        android:text="@string/btn_cancelar"
        android:textColor="#CDE7FB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnAceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPath" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/primary_toolbar"
        android:text="@string/btn_aceptar"
        android:textColor="#CDE7FB"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancelar"
        app:layout_constraintTop_toBottomOf="@id/etPath" />

    <Button
        android:id="@+id/btnProbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="#8590D8"
        android:textSize="15sp"
        android:text="Probar"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearAlert"
        app:layout_constraintBottom_toTopOf="@id/tv_ip_servidor_dialog"
        app:layout_constraintStart_toEndOf="@id/rg_fuente_datos"/>


</androidx.constraintlayout.widget.ConstraintLayout>